--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 # MyBatis
-mybatis.type-aliases-package="com.jinshuai.entity"
-mybatis.mapper-locations="classpath:mappers/*.xml"
+mybatis.type-aliases-package=com.jinshuai.seckill.entity
+mybatis.mapper-locations=classpath:mappers/*.xml
+#HotBuild
+spring.devtools.livereload.enabled=true
