--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,15 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&charac
 # MyBatis
 mybatis.type-aliases-package=com.jinshuai.seckill.entity
 mybatis.mapper-locations=classpath:mappers/*.xml
-#HotBuild
+# HotDeploy
 spring.devtools.livereload.enabled=true
+# Redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+#spring.redis.password=
+spring.redis.timeout=3
+spring.redis.jedis.pool.max-idle=16
+spring.redis.jedis.pool.min-idle=8
+spring.redis.jedis.pool.max-active=32
+spring.redis.jedis.pool.max-wait=2
