--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,25 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.druid.initial-size=8
+spring.datasource.druid.max-active=16
+
 # MyBatis
 mybatis.type-aliases-package=com.jinshuai.seckill.entity
 mybatis.mapper-locations=classpath:mappers/*.xml
+
 # HotDeploy
 spring.devtools.livereload.enabled=true
+
 # Redis
 spring.redis.database=0
-spring.redis.host=127.0.0.1
+spring.redis.host=202.113.127.139
 spring.redis.port=6379
-#spring.redis.password=
-spring.redis.timeout=3
+spring.redis.password=lab214
+spring.redis.timeout=0
 spring.redis.jedis.pool.max-idle=16
 spring.redis.jedis.pool.min-idle=8
-spring.redis.jedis.pool.max-active=32
-spring.redis.jedis.pool.max-wait=2
+spring.redis.jedis.pool.max-active=3000
+spring.redis.jedis.pool.max-wait=-1
+
+#LogBack
