--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.devtools.livereload.enabled=true
 
 # Redis
 spring.redis.database=0
-spring.redis.host=202.113.127.139
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=lab214
+spring.redis.password=
 spring.redis.timeout=0
 spring.redis.jedis.pool.max-idle=16
 spring.redis.jedis.pool.min-idle=8
