--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.devtools.livereload.enabled=true
 spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=
+spring.redis.password=xxx
 spring.redis.timeout=0
 spring.redis.jedis.pool.max-idle=16
 spring.redis.jedis.pool.min-idle=8
