use rocketmq as mq

--- a/src/main/resources/application_example.properties
+++ b/src/main/resources/application_example.properties
@@ -25,4 +25,6 @@ spring.redis.jedis.pool.min-idle=8
 spring.redis.jedis.pool.max-active=3000
 spring.redis.jedis.pool.max-wait=-1
 
-#LogBack
+# RocketMQ
+spring.rocketmq.nameServer=127.0.0.1:9876
+spring.rocketmq.producer.group=orderProducerGroup
