--- a/src/main/resources/application_example.properties
+++ b/src/main/resources/application_example.properties
@@ -1,15 +1,21 @@
 # DataSource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
-spring.datasource.druid.initial-size=8
-spring.datasource.druid.max-active=16
+# master
+spring.datasource.druid.master.username=root
+spring.datasource.druid.master.password=root
+spring.datasource.druid.master.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.druid.master.initial-size=8
+spring.datasource.druid.master.max-active=16
+# slave
+spring.datasource.druid.slave.username=root
+spring.datasource.druid.slave.password=root
+spring.datasource.druid.slave.url=jdbc:mysql://127.0.0.2:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.druid.slave.initial-size=8
+spring.datasource.druid.slave.max-active=20
 
 # MyBatis
 mybatis.type-aliases-package=com.jinshuai.seckill.entity
-mybatis.mapper-locations=classpath:mappers/*.xml
 
 # HotDeploy
 spring.devtools.livereload.enabled=true
