--- a/src/main/resources/application_example.properties
+++ b/src/main/resources/application_example.properties
@@ -1,3 +1,5 @@
+### change the filename to application.properties ###
+
 # DataSource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
