add redis sentinel

--- a/src/main/resources/application_example.properties
+++ b/src/main/resources/application_example.properties
@@ -25,13 +25,16 @@ spring.devtools.livereload.enabled=true
 # Redis
 spring.redis.database=0
 spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=xxx
+spring.redis.port=6380
+spring.redis.password=todo
 spring.redis.timeout=0
 spring.redis.jedis.pool.max-idle=16
 spring.redis.jedis.pool.min-idle=8
 spring.redis.jedis.pool.max-active=3000
 spring.redis.jedis.pool.max-wait=-1
+
+spring.redis.sentinel.master=mymaster
+spring.redis.sentinel.nodes=127.0.0.1:26379,127.0.0.1:26380,127.0.0.1:26381
 
 # RocketMQ
 spring.rocketmq.nameServer=127.0.0.1:9876
