bug fix for application.properties

--- a/src/main/resources/application_example.properties
+++ b/src/main/resources/application_example.properties
@@ -1,5 +1,4 @@
-### change the filename to application.properties ###
-
+server.port=8080
 # DataSource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -12,12 +11,13 @@ spring.datasource.druid.master.max-active=16
 # slave
 spring.datasource.druid.slave.username=root
 spring.datasource.druid.slave.password=root
-spring.datasource.druid.slave.url=jdbc:mysql://127.0.0.2:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.druid.slave.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.druid.slave.initial-size=8
 spring.datasource.druid.slave.max-active=20
 
 # MyBatis
 mybatis.type-aliases-package=com.jinshuai.seckill.entity
+#logging.level.com.jinshuai.seckill.dao=false
 
 # HotDeploy
 spring.devtools.livereload.enabled=true
@@ -26,7 +26,7 @@ spring.devtools.livereload.enabled=true
 spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.port=6380
-spring.redis.password=todo
+spring.redis.password=root
 spring.redis.timeout=0
 spring.redis.jedis.pool.max-idle=16
 spring.redis.jedis.pool.min-idle=8
