--- a/src/main/resources/application_example.properties
+++ b/src/main/resources/application_example.properties
@@ -1,3 +1,5 @@
+# you need change filename to 'application.properties'
+
 server.port=8080
 # DataSource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
