--- a/seckill-core/src/main/resources/application_example.properties
+++ b/seckill-core/src/main/resources/application_example.properties
@@ -44,3 +44,8 @@ spring.redis.sentinel.nodes=127.0.0.1:26379,127.0.0.1:26380,127.0.0.1:26381
 # RocketMQ
 spring.rocketmq.nameServer=127.0.0.1:9876
 spring.rocketmq.producer.group=orderProducerGroup
+
+# Request Frequency
+# 限制单个用户5秒内最多请求10次
+request.duration=5
+request.times=10
