update: update code style

--- a/seckill-core/src/main/resources/application-dev.properties
+++ b/seckill-core/src/main/resources/application-dev.properties
@@ -34,11 +34,11 @@ spring.redis.jedis.pool.max-active=3000
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.sentinel.master=mymaster
 spring.redis.sentinel.nodes=127.0.0.1:26379,127.0.0.1:26380,127.0.0.1:26381
+# Request Frequency
+redis.request.duration=5
+redis.request.times=10
+redis.expire=20
 
 # RocketMQ
 spring.rocketmq.nameServer=127.0.0.1:9876
 spring.rocketmq.producer.group=orderProducerGroup
-
-# Request Frequency
-request.duration=5
-request.times=10
