update: add distribute lock to solve repeat consume

--- a/seckill-core/src/main/resources/application-dev.properties
+++ b/seckill-core/src/main/resources/application-dev.properties
@@ -40,5 +40,5 @@ redis.request.times=10
 redis.expire=20
 
 # RocketMQ
-spring.rocketmq.nameServer=127.0.0.1:9876
-spring.rocketmq.producer.group=orderProducerGroup
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=orderProducerGroup
