--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 			<version>1.1.9</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-spring-boot-starter</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
@@ -87,11 +92,6 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.0</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.qianmi</groupId>
-			<artifactId>spring-boot-starter-rocketmq</artifactId>
-			<version>1.0.0-RELEASE</version>
 		</dependency>
 	</dependencies>
 
