bug fix: request frequency limit && buy repeatly

--- a/seckill-core/src/main/resources/application-dev.properties
+++ b/seckill-core/src/main/resources/application-dev.properties
@@ -1,11 +1,9 @@
 # DataSource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
 # MyCat
 #spring.datasource.druid.username=user
 #spring.datasource.druid.password=user
 #spring.datasource.druid.url=jdbc:mysql://127.0.0.1:8066/seckill
-
 # master
 spring.datasource.druid.master.username=root
 spring.datasource.druid.master.password=root
@@ -14,14 +12,11 @@ spring.datasource.druid.master.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicod
 spring.datasource.druid.slave.username=root
 spring.datasource.druid.slave.password=root
 spring.datasource.druid.slave.url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
-
 # MyBatis
 mybatis.type-aliases-package=com.jinshuai.seckill.entity
 #logging.level.com.jinshuai.seckill.dao=false
-
 # HotDeploy
 spring.devtools.livereload.enabled=true
-
 # Redis
 spring.redis.database=0
 spring.redis.host=127.0.0.1
@@ -37,8 +32,8 @@ spring.redis.sentinel.nodes=127.0.0.1:26379,127.0.0.1:26380,127.0.0.1:26381
 # Request Frequency
 redis.request.duration=5
 redis.request.times=10
-redis.expire=20
-
+redis.product.expire=20
+redis.lock.expire=1000
 # RocketMQ
 rocketmq.name-server=127.0.0.1:9876
 rocketmq.producer.group=orderProducerGroup
